force-app/main/default/objects/FuzzyPicklist__mdt/FuzzyPicklist__mdt.object-meta.xml
<CustomObject>
    <label>FuzzyPicklist</label>
    <pluralLabel>FuzzyPicklists</pluralLabel>
</CustomObject>