force-app/main/default/objects/FuzzyPicklist__mdt/fields/Free_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Free_Text_Field__c</fullName>
    <label>Free Text Field</label>
    <metadataRelationshipControllingField>FuzzyPicklist__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>FuzzyPicklists</relationshipLabel>
    <relationshipName>FuzzyPicklists</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>