force-app/main/default/objects/FuzzyPicklist__mdt/fields/Match_Last_Evaluated_Date_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Last_Evaluated_Date_Time_Field__c</fullName>
    <label>Match Last Evaluated Date Time Field</label>
    <metadataRelationshipControllingField>FuzzyPicklist__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>FuzzyPicklists2</relationshipLabel>
    <relationshipName>FuzzyPicklists2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>