force-app/main/default/objects/FuzzyPicklist__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>FuzzyPicklists</relationshipLabel>
    <relationshipName>FuzzyPicklists</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>