force-app/main/default/objects/FuzzyPicklist__mdt/fields/Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Field__c</fullName>
    <label>Picklist Field</label>
    <metadataRelationshipControllingField>FuzzyPicklist__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>FuzzyPicklists1</relationshipLabel>
    <relationshipName>FuzzyPicklists1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>