force-app/main/default/objects/FuzzyPicklist__mdt/fields/Text_Last_Populated_Date_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Text_Last_Populated_Date_Time_Field__c</fullName>
    <label>Text Last Populated Date Time Field</label>
    <metadataRelationshipControllingField>FuzzyPicklist__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>FuzzyPicklists3</relationshipLabel>
    <relationshipName>FuzzyPicklists3</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>